feat: add UUID to playlist/playlist-combos/user/combo tables